Added description for ohmyzsh pkg

--- a/ohmyzsh.ini
+++ b/ohmyzsh.ini
@@ -1,4 +1,5 @@
 [pkg]
 name=ohmyzsh
+description=A delightful framework for managing your zsh configuration.
 url=https://github.com/ohmyzsh/ohmyzsh
 bash=sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
