Added description for cbonsai pkg

--- a/cbonsai.ini
+++ b/cbonsai.ini
@@ -1,4 +1,5 @@
 [pkg]
 name=cbonsai
+description=a bonsai tree generator written in C.
 url=https://gitlab.com/jallbrit/cbonsai
 bash=sudo make install
