--- a/fzf.ini
+++ b/fzf.ini
@@ -1,4 +1,5 @@
 [pkg]
 name=fzf
+description=fzf is a general-purpose command-line fuzzy finder.
 url=https://github.com/junegunn/fzf
 bat=./install
