Added description for neovim pkg

--- a/neovim.ini
+++ b/neovim.ini
@@ -1,4 +1,5 @@
 [pkg]
 name=neovim
+description=Vim-fork focused on extensibility and usability.
 url=https://github.com/neovim/neovim
 bash=make CMAKE_BUILD_TYPE=RelWithDebInfo && sudo make install
