--- a/vim-plug.ini
+++ b/vim-plug.ini
@@ -1,4 +1,5 @@
 [pkg]
 name=vim-plug
+description=A minimalist Vim plugin manager.
 url=https://github.com/junegunn/vim-plug
 bash=sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
