--- a/bat.ini
+++ b/bat.ini
@@ -2,4 +2,6 @@
 name=bat
 description=A cat(1) clone with wings.
 url=https://github.com/sharkdp/bat
-bash=cargo install --locked bat; cp ./target/release/bat ~/.local/bin/
+
+[script]
+install=cargo install --locked bat; cp ./target/release/bat ~/.local/bin/
