fix(cbonsai): Moved to script section system

--- a/cbonsai.ini
+++ b/cbonsai.ini
@@ -2,4 +2,6 @@
 name=cbonsai
 description=a bonsai tree generator written in C.
 url=https://gitlab.com/jallbrit/cbonsai
-bash=sudo make install
+
+[script]
+install=sudo make install
