fix(exa): Moved to script section system

--- a/exa.ini
+++ b/exa.ini
@@ -2,4 +2,6 @@
 name=exa
 description=A modern replacement for ls.
 url=https://github.com/ogham/exa
-bash=cargo build --release; cp ./target/release/exa ~/.local/bin/
+
+[script]
+install=cargo build --release; cp ./target/release/exa ~/.local/bin/
