--- a/fzf.ini
+++ b/fzf.ini
@@ -2,4 +2,6 @@
 name=fzf
 description=fzf is a general-purpose command-line fuzzy finder.
 url=https://github.com/junegunn/fzf
-bat=./install
+
+[script]
+install=./install
