fix(ohmyzsh): Moved to script section system

--- a/ohmyzsh.ini
+++ b/ohmyzsh.ini
@@ -2,4 +2,6 @@
 name=ohmyzsh
 description=A delightful framework for managing your zsh configuration.
 url=https://github.com/ohmyzsh/ohmyzsh
-bash=sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
+
+[script]
+install=sh -c "$(curl -fsSL https://raw.githubusercontent.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
