--- a/ripgrep.ini
+++ b/ripgrep.ini
@@ -2,4 +2,6 @@
 name=ripgrep
 description=Recursively search directories for a regex pattern.
 url=https://github.com/BurntSushi/ripgrep
-bash=cargo build --release; cp ./target/release/rg ~/.local/bin/
+
+[script]
+install=cargo build --release; cp ./target/release/rg ~/.local/bin/
