fix(tmux): Moved to script section system

--- a/tmux.ini
+++ b/tmux.ini
@@ -2,4 +2,6 @@
 name=tmux
 description=tmux is a terminal multiplexer.
 url=https://github.com/tmux/tmux
-bash=sh autogen.sh; ./configure && make; sudo make install
+
+[script]
+install=sh autogen.sh; ./configure && make; sudo make install
