--- a/vim-plug.ini
+++ b/vim-plug.ini
@@ -2,4 +2,6 @@
 name=vim-plug
 description=A minimalist Vim plugin manager.
 url=https://github.com/junegunn/vim-plug
-bash=sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+
+[script]
+install=sh -c 'curl -fLo "${XDG_DATA_HOME:-$HOME/.local/share}"/nvim/site/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
