fix(rust): added no-confirm flag to install script

--- a/rust.yaml
+++ b/rust.yaml
@@ -5,4 +5,4 @@ desc: The Rust toolchain installer
 collection: core
 
 install:
-  - curl https://sh.rustup.rs -sSf | sh
+  - curl https://sh.rustup.rs -sSf | sh -s -- -y
