fix(tmux): add prefix variable to 'make install'

--- a/tmux.yaml
+++ b/tmux.yaml
@@ -8,8 +8,8 @@ install:
   - sh autogen.sh
   - ./configure
   - make
-  - sudo make install
+  - make prefix=$HOME/.hayashi/pack install
 
 update:
   - make
-  - sudo make install
+  - make prefix=$HOME/.hayashi/pack install
