--- a/hayashi.yaml
+++ b/hayashi.yaml
@@ -1,5 +1,5 @@
 pkg:  hayashi
-url:  https://github.com/crispybaccoon/hayashi
+url:  crispybaccoon/hayashi
 desc: a tiny distro-independent package manager written in Go.
 
 pack:
