add(neofetch): use short github url

--- a/neofetch.yaml
+++ b/neofetch.yaml
@@ -1,5 +1,5 @@
 pkg:  neofetch
-url:  https://github.com/dylanaraps/neofetch
+url:  dylanaraps/neofetch
 desc: A command-line system information tool written in bash 3.2+
 
 install:
